// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Evaluate Patient Info: Pregnancy Info should display all pregnancy data  1`] = `
<div>
  <div
    class="display-flex"
  >
    <div
      class="margin-left-auto padding-top-1"
    >
      <button
        class="usa-button usa-button--unstyled"
        data-testid="button"
        type="button"
      >
        Expand all 
        pregnancy info
      </button>
      <span
        class="vertical-line"
      />
      <button
        class="usa-button usa-button--unstyled"
        data-testid="button"
        type="button"
      >
        Collapse all 
        pregnancy info
      </button>
    </div>
  </div>
  <div
    class="usa-accordion accordion-rr"
    data-allow-multiple="true"
    data-testid="accordion"
  >
    <h5
      class="usa-accordion__heading side-nav-ignore"
    >
      <button
        aria-controls="445b6f64-03c9-e940-575d-a3bf6c5856d9-r:id-0"
        aria-expanded="true"
        class="usa-accordion__button"
        data-testid="accordionButton_445b6f64-03c9-e940-575d-a3bf6c5856d9-r:id-0"
        type="button"
      >
        <div
          class="display-flex flex-row flex-no-wrap flex-justify"
        >
          <span>
            Pregnancy Status
             
            <span
              class="usa-tag margin-left-105"
              data-testid="tag"
            >
              Pregnancy
            </span>
          </span>
          <span
            class="text-base"
            style="font-size: 1rem;"
          >
            Start: 08/26/2017
          </span>
        </div>
      </button>
    </h5>
    <div
      class="usa-accordion__content usa-prose side-nav-ignore"
      data-testid="accordionItem_445b6f64-03c9-e940-575d-a3bf6c5856d9-r:id-0"
      id="445b6f64-03c9-e940-575d-a3bf6c5856d9-r:id-0"
    >
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Status
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            Pregnancy
          </div>
        </div>
        <div
          class="section__line_gray"
        />
      </div>
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Effective Date/Time
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            Start: 08/26/2017
          </div>
        </div>
        <div
          class="section__line_gray"
        />
      </div>
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Pregnancy Determination Date/Time
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            10/01/2017
          </div>
        </div>
        <div
          class="section__line_gray"
        />
      </div>
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Pregnancy Determination Method
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            Ultrasonography
          </div>
        </div>
        <div
          class="section__line_gray"
        />
      </div>
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Delivery Date Estimated From Ovulation Date
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            05/22/2017
          </div>
        </div>
        <div
          class="section__line_gray"
        />
      </div>
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Gestational Age Estimated From Selected Delivery Date
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            143 d
          </div>
        </div>
        <div
          class="section__line_gray"
        />
      </div>
      <div>
        <div
          class="grid-row flex-column"
        >
          <div
            class="data-title padding-right-1"
          >
            Outcomes
          </div>
          <div
            class="grid-col width-full text-pre-line p-list"
          >
            <ul
              class="add-list-reset"
            >
              <li
                class="padding-y-2 "
              >
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="text-normal data-title padding-right-1"
                    >
                      Birth Order
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list"
                    >
                      1
                    </div>
                  </div>
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="text-normal data-title padding-right-1"
                    >
                      Outcome
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list"
                    >
                      Stillbirth
                    </div>
                  </div>
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="text-normal data-title padding-right-1"
                    >
                      Date/Time
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list"
                    >
                      01/05/2020 8:50 AM
                    </div>
                  </div>
                </div>
                <div>
                  <div
                    class="grid-row"
                  >
                    <div
                      class="text-normal data-title padding-right-1"
                    >
                      Procedure
                    </div>
                    <div
                      class="grid-col maxw7 text-pre-line p-list"
                    >
                      Complete breech delivery
Performed Date/Time: 01/05/2018
                    </div>
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="section__line_gray"
        />
      </div>
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Birth Plurality Of Pregnancy
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            2
          </div>
        </div>
        <div
          class="section__line_gray"
        />
      </div>
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Date First Prenatal Visit
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            09/01/2016
          </div>
        </div>
        <div
          class="section__line_gray"
        />
      </div>
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Prenatal Visits For This Pregnancy #
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            3
          </div>
        </div>
        <div
          class="section__line_gray"
        />
      </div>
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Clinical Finding
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            Breech presentation
          </div>
        </div>
        <div
          class="section__line_gray"
        />
      </div>
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Clinical Finding
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            Abnormal fetal heart rate
          </div>
        </div>
        <div
          class="section__line_gray"
        />
      </div>
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Comments
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            SFH: single viable intrauterine gestation estimated age 11 weeks 5 days, FHR 171 BPM - MS
Flinn Anatomy: AC 28%, EFW 31% (542g), placenta anterior/high, normal anatomy - SL
          </div>
        </div>
      </div>
    </div>
    <h5
      class="usa-accordion__heading side-nav-ignore"
    >
      <button
        aria-controls="94fe2533-e208-a1b4-c510-c9ece8a2d490-r:id-1"
        aria-expanded="true"
        class="usa-accordion__button"
        data-testid="accordionButton_94fe2533-e208-a1b4-c510-c9ece8a2d490-r:id-1"
        type="button"
      >
        <div
          class="display-flex flex-row flex-no-wrap flex-justify"
        >
          <span>
            Postpartum Status
             
          </span>
          <span
            class="text-base"
            style="font-size: 1rem;"
          >
            01/05/2020 10:15 AM
          </span>
        </div>
      </button>
    </h5>
    <div
      class="usa-accordion__content usa-prose side-nav-ignore"
      data-testid="accordionItem_94fe2533-e208-a1b4-c510-c9ece8a2d490-r:id-1"
      id="94fe2533-e208-a1b4-c510-c9ece8a2d490-r:id-1"
    >
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Status
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            Mid postpartum state
          </div>
        </div>
        <div
          class="section__line_gray"
        />
      </div>
      <div>
        <div
          class="grid-row"
        >
          <div
            class="data-title padding-right-1"
          >
            Effective Date/Time
          </div>
          <div
            class="grid-col maxw7 text-pre-line p-list"
          >
            01/05/2020 10:15 AM
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Evaluate Patient Info: Pregnancy Info should display all pregnancy data  2`] = `
<div>
  <table
    class="usa-table usa-table--borderless width-full _fixed_1khz6_1 table-caption-margin border-top border-left border-right"
    data-testid="table"
  >
    <thead>
      <tr>
        <th
          class="table-header"
          scope="col"
        >
          First Date of the Last Period
        </th>
        <th
          class="table-header"
          scope="col"
        >
          Collection Date/Time
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class="text-top text-pre-line"
        >
          08/01/2017
        </td>
        <td
          class="text-top text-pre-line"
        >
          01/05/2020 10:15 AM
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Evaluate Patient Info: Pregnancy Info should display all pregnancy data  3`] = `
<div>
  No desire to become pregnant
Start: 01/07/2017
End: 01/07/2018
</div>
`;

exports[`Evaluate Patient Info: Pregnancy Info should display all pregnancy data  4`] = `
<div>
  05/01/2016
</div>
`;

exports[`Evaluate Patient Info: Pregnancy Info should display all pregnancy data  5`] = `
<div>
  RhD positive
</div>
`;

exports[`Evaluate Patient Info: Pregnancy Info should display all pregnancy data  6`] = `
<div>
  Rhesus isoimmunization with antenatal problem
</div>
`;

exports[`Evaluate Patient Info: Pregnancy Info should display all pregnancy data  7`] = `
<div>
  13 ML Rho(D) immune globulin, human 1154 UNT/ML Injection [WinRho]
Start: 06/18/2017
</div>
`;

exports[`Evaluate Patient Info: Pregnancy Info should display all pregnancy data  8`] = `
<div>
  <table
    class="usa-table usa-table--borderless width-full _fixed_1khz6_1 table-caption-margin border-top border-left border-right"
    data-testid="table"
  >
    <thead>
      <tr>
        <th
          class="table-header"
          scope="col"
        >
          Context
        </th>
        <th
          class="table-header"
          scope="col"
        >
          Value
        </th>
        <th
          class="table-header"
          scope="col"
        >
          Date
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class="text-top text-pre-line"
        >
          [#] Pregnancies
        </td>
        <td
          class="text-top text-pre-line"
        >
          6
        </td>
        <td
          class="text-top text-pre-line"
        >
          01/05/2018 10:15 AM
        </td>
      </tr>
      <tr>
        <td
          class="text-top text-pre-line"
        >
          [#] Parity
        </td>
        <td
          class="text-top text-pre-line"
        >
          2
        </td>
        <td
          class="text-top text-pre-line"
        >
          01/05/2018 10:15 AM
        </td>
      </tr>
      <tr>
        <td
          class="text-top text-pre-line"
        >
          [#] Abortions
        </td>
        <td
          class="text-top text-pre-line"
        >
          3
        </td>
        <td
          class="text-top text-pre-line"
        >
          01/05/2018 10:15 AM
        </td>
      </tr>
      <tr>
        <td
          class="text-top text-pre-line"
        >
          [#] Births.term
        </td>
        <td
          class="text-top text-pre-line"
        >
          2
        </td>
        <td
          class="text-top text-pre-line"
        >
          01/05/2018 10:15 AM
        </td>
      </tr>
      <tr>
        <td
          class="text-top text-pre-line"
        >
          [#] Births.preterm
        </td>
        <td
          class="text-top text-pre-line"
        >
          0
        </td>
        <td
          class="text-top text-pre-line"
        >
          01/05/2018 10:15 AM
        </td>
      </tr>
      <tr>
        <td
          class="text-top text-pre-line"
        >
          [#] Births.still living
        </td>
        <td
          class="text-top text-pre-line"
        >
          2
        </td>
        <td
          class="text-top text-pre-line"
        >
          01/05/2018 10:15 AM
        </td>
      </tr>
      <tr>
        <td
          class="text-top text-pre-line"
        >
          Previous live births now dead #
        </td>
        <td
          class="text-top text-pre-line"
        >
          0
        </td>
        <td
          class="text-top text-pre-line"
        >
          01/05/2018 10:15 AM
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
